# MasterLimiter

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  MasterLimiter.code-workspace  README.md
PROMPTS/: PLAN.md  SLICE_01_skeleton.md  SLICE_02_bench.md  SLICE_03_1_envelope_fix.md  SLICE_03_2_bench_fix_and_rebaseline.md  SLICE_03_limiter_core.md  SLICE_04_1_saturator_ispcatch.md  SLICE_04_2_fir_halfband.md  SLICE_04_3_bench_rebaseline.md  SLICE_04_truepeak_oversample.md  SLICE_05_transient_sustain_split.md  SLICE_07_1_1_pop_diag_em_dash_onoff.md  SLICE_07_1_2_readout_numeric_clipper_led.md  SLICE_07_1_3_revert_warmkeep_tighter_clicks.md  SLICE_07_1_4_1_actually_engage_simd.md  SLICE_07_1_4_simd_ramp_loop.md  SLICE_07_1_5_clean_attack_cap_and_click_threshold.md  SLICE_07_1_gr_2ch_meter_and_max_readouts.md  SLICE_07_CLOSE.md  SLICE_07_CONSOLIDATED_CLOSE.md  SLICE_07_stereo_unlink.md  SLICE_08_1_1_scope_revert.md  SLICE_08_1_2_close.md  SLICE_08_1_3_meter_occlusion_fix.md  SLICE_08_1_ui_polish.md  SLICE_08_meters.md  SLICE_09_1_bench_driver_fix.md  SLICE_09_2_release_stuck_fix.md  SLICE_09_3a_1_ramp_anchor_fix.md  SLICE_09_3a_release_combinator_and_clip_meter.md  SLICE_09_4_1_envelope_fastpath.md  SLICE_09_4_2_clean_attack_cap.md  SLICE_09_4_limiter_4x_oversampling.md  SLICE_09_5_bench_recalibration.md  SLICE_09_5b_bench_recal_treatment_b.md  SLICE_09_6_consolidate_oversampling.md  SLICE_09_6c_ozone_reference_bench.md  SLICE_09_CLOSE.md  SLICE_09_character_and_onoff.md  SLICE_10_1_ui_refine.md  (+102 more)
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/parameters/: ParameterIDs.h  Parameters.cpp  Parameters.h
Source/ui/: DevControlsComponent.cpp  DevControlsComponent.h  HistoryGraphComponent.cpp  HistoryGraphComponent.h  MainView.cpp  MainView.h  MasterLimiterLookAndFeel.cpp  MasterLimiterLookAndFeel.h  PresetManager.cpp  PresetManager.h
Source/ui/loudness/: LoudnessNumericPanel.cpp  LoudnessNumericPanel.h
Source/ui/meters/: ClipBallistics.cpp  ClipBallistics.h  GainReductionMeter.cpp  GainReductionMeter.h  MeterComponent.cpp  MeterComponent.h  MeterGroupComponent.cpp  MeterGroupComponent.h
Source/util/: PlatformOcclusion.h  PlatformOcclusion.mm
design/: ui_direction_v1.html
docs/: AAX_SIGNING_REQUEST_TEMPLATE.md  BETA_TESTER_GUIDE.md  CUSTOM_FILTERS.md  FILTER_QUALITY_ROADMAP.md  HANDOFF.md  LIMITER_TYPES.md  MANUAL.md  METERING_ACCURACY_AUDIT.md  PROGRESS.md  RELEASE_SIGNING.md  SIGNAL_FLOW.md  SPEC.md  TODO.md
docs/bench/SLICE_02/2026-05-11T13-50-06.558858_00-00/: results.json  results.md
docs/bench/SLICE_03/20260511T153328Z/: results.json  results.md
docs/bench/SLICE_04/20260511T182019Z/: results.json  results.md
docs/bench/SLICE_05/20260511T194300Z/: results.json  results.md
docs/prompts/: BUILD_install_verify_handoff.md  FIX_crossover_duckswap_race_handoff.md  FIX_crossover_swap_race_handoff.md  FIX_ui_relocate_lufs_resetpeaks_handoff.md  RELEASE_aax_devbeta_handoff.md  SLICE_F0_biquad_kweight.md  SLICE_F2_linearphase_crossover.md  SLICE_F2a_linearphase_crossover_CLOSE.md  SLICE_F2b_crossover_integration.md  SLICE_F2b_crossover_integration_CLOSE.md  SLICE_F2c_partitioned_convolution.md  SLICE_F2c_partitioned_convolution_CLOSE.md  SLICE_F3_oversampler.md  SLICE_F3d_PartA_handoff.md  SLICE_F3d_PartB_handoff.md  SLICE_F3d_oversampler_8x.md  SLICE_anticrackle_debounce_handoff.md  SLICE_anticrackle_duckswap_handoff.md  SLICE_anticrackle_gesturecommit_handoff.md  SLICE_default_preset_and_compact_ui_handoff.md
release/: PUBLISH.md  beta.json  make_guide_pdf.sh  make_manual_pdf.sh  release-notes-0.3.0-beta.md  release-notes-0.3.1-beta.md
resources/: MasterLimiter-standalone.entitlements
scripts/: .aax_wraptool.env.example  build.sh  build_release.sh  build_release_pkg.sh  check_ui_ascii.sh  clean.sh  create_installer.sh  install_system.sh  install_user.sh  release_macos.sh  release_macos_devbeta.sh  release_macos_pkg.sh  release_sign_macos.sh  sign_and_notarize.sh  sign_and_notarize_pkg.sh  source_repo_env.sh  wraptool_sign_aax.sh
tools/analysis/: analyze.py  f3d_clipper_verify.py  hammerstein.py  sweep_isolate.py  sweep_render.py  transient_lookahead.py
